# AiH-Group5

./: .gitignore  M3_A1_group5.ipynb  README.md  pyproject.toml
capstone-project/: .gitignore  main.py  readme.md
capstone-project/Notebooks/: final_pipeline_evidence.ipynb
capstone-project/artifacts/: test_report.json
capstone-project/artifacts/b1/: test_report.json
capstone-project/artifacts/b3/: test_report.json
capstone-project/artifacts/regression/: test_report.json
capstone-project/configs/: efficientnet_b0_smote.json  efficientnet_b1.json  efficientnet_b3.json
capstone-project/docs/: experiment_results.md  pipeline_scope.md  preprocessing_methodology.tex  research_paper.tex
capstone-project/experiments/: README.md
capstone-project/experiments/notebooks/: 2026-06-13-aptos-severity-prediction-baseline.ipynb  2026-06-13-data-exploration.ipynb  2026-06-15-exp08-smote-rgb-lab-clahe-xai-auc-gradcam.ipynb  (+1 more)
capstone-project/final_models/: SMOTE + Focal loss.ipynb  SMOTE.ipynb  results.tex
capstone-project/models/: _iou.txt  references_to_add.bib
capstone-project/scripts/: cut_off.py  predict_saved_model.py
capstone-project/src/: gradcam.py  model.py  plots.py  pre_proc_pipeline.py  preprocessing.py  split_metadata.py
capstone-project/temp_paper_stuff/: SMOTE + Focal loss.ipynb  SMOTE.ipynb  results.tex
capstone-project/tests/: test_gradcam_contract.py  test_model_contract.py  test_preprocessing_contract.py  test_project_structure.py  test_split_contract.py  test_split_metadata.py  test_training_structure.py
docs/coursework/: README.md
(+19 files in other folders)
