[project]
name = "dr-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "imblearn>=0.0",
    "kagglehub[pandas-datasets]>=1.0.1",
    "mlflow>=3.13.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=2.2,<3.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21,<2.22",
    "tqdm>=4.67.3",
]
